--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
 .App {
   text-align: center;
 }
+
+body {
+  background-image: url('https://st2.depositphotos.com/3213441/12022/v/600/depositphotos_120226584-stock-illustration-pokemon-go-pokeball-seamless-texture.jpg');
+}
