--- a/src/components/Pokemon.css
+++ b/src/components/Pokemon.css
@@ -10,3 +10,16 @@
   padding: 20px;
   width: 30%;
 }
+
+@media ( max-width : 600px ) {
+
+  .poke-card {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    letter-spacing: 4px;
+    line-height: 30px;
+    padding: 15px;
+    width: 60%;
+  }
+}
